2019-05-27  Peter Bloomfield  <pbloomfield@bellsouth.net>

	* meson.build: specify meson version >= 0.43

2019-05-27  Peter Bloomfield  <pbloomfield@bellsouth.net>

	* meson.build: Bump default version to 2.5.7;
	  use compiler.get_supported_arguments() to check all arguments at once,
	  instead of looping through a list and checking them one at a time.

2019-05-26  Pawel Salek  <pawsa0@gmail.com>

	* NEWS, configure.ac: correct typos; bump version base for git builds.

2019-05-25  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Use G_DECLARE_FINAL_TYPE to declare LibBalsaAddressBookRubrica

	Make the structure private; no need for getters and setters.

	* libbalsa/address-book-rubrica.c:
	* libbalsa/address-book-rubrica.h:

2019-05-25  Pawel Salek  <pawsa0@gmail.com>

	* NEWS, configure.ac: Release balsa-2.5.7

2019-05-22  Albrecht Dreß  <albrecht.dress@arcor.de>

	Mitigate “Re: What's Up Johnny?” vulnerabilities

	* src/balsa-app.h: add flag whether the user wants to be warned
	  when replying to an encrypted message
	* src/save-restore.c:
	  • save/restore new flag
	  • add reply selection dialogue to geometry manager
	* src/sendmsg-window.c:
	  • tree_add_quote_body(): refactoring, add information whether
	    the part has been decrypted
	  • scan_bodies(): use new tree_add_quote_body(), propagate
	    information about encrypted containers
	  • unselect_decrypted(): new function for deselecting all
	    decrypted parts in the dialogue for selecting cited parts
	  • quote_parts_select_dlg(): add message when replying to a
	    fully or partially encrypted message, use geometry manager
	  • show_decrypted_warning(): show dialogue when the user
	    replies to a single-part decrypted message
	  • collect_for_quote(): use new scan_bodies() api

2019-05-16  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Do not break user's config

	* libbalsa/address-book.c
	(libbalsa_address_book_new_from_config): if the type is