@@ -1,5 +1,15 @@
 2019-05-27  Peter Bloomfield  <pbloomfield@bellsouth.net>
 
+	Use G_DECLARE_FINAL_TYPE to declare LibBalsaAddressBookVcard
+
+	Make the structure private; no need for getters and setters.
+
+	* libbalsa/address-book-vcard.c (libbalsa_address_book_vcard_init),
+	  (libbalsa_address_book_vcard_new):
+	* libbalsa/address-book-vcard.h:
+
+2019-05-27  Peter Bloomfield  <pbloomfield@bellsouth.net>
+
 	* meson.build: specify meson version >= 0.43
 
 2019-05-27  Peter Bloomfield  <pbloomfield@bellsouth.net>
